--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <main></main>
+    <form class="form">
+      <label>
+        <input
+          type="text"
+          name="search-text"
+          placeholder="Search images..."
+          required
+        />
+      </label>
+      <button type="submit">Search</button>
+    </form>
+    <ul class="gallery"></ul>
+    <span class="loader is-hidden"></span>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
